Task 101: Fix dialog window width on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -189,3 +189,13 @@ nav > div {
 .hidden { /* For Mnemoscheme */
     visibility: hidden;
 }
+
+@media all and (max-width: 600px) {
+    .dig-param-dialog .mat-dialog-container {
+        padding: 0.5em;
+    }
+
+    .dig-param-dialog {
+        max-width: 100vw !important;
+    }
+}
